archive/logs/playfulness-reevaluation-20260129-142549.log
Traceback (most recent call last):
  File "/home/anicka/karma-electric/scripts/reevaluate_playfulness.py", line 14, in <module>
    from batch_baseline import (
    ...<7 lines>...
    )
  File "/home/anicka/karma-electric/scripts/batch_baseline.py", line 273
    """Load all baseline results and generate summary statistics."""
                                                                 ^
SyntaxError: unterminated triple-quoted string literal (detected at line 401)
